added bad error tracking

--- a/styles.css
+++ b/styles.css
@@ -520,6 +520,10 @@
 					flex-direction: column;
 			}
 
+			.airport.error {
+				text-decoration: line-through;
+			}
+
 			.airport span {
 				display: block;
 			}
