--- a/styles.css
+++ b/styles.css
@@ -520,16 +520,23 @@
 					flex-direction: column;
 			}
 
-			.airport.error {
-				text-decoration: line-through;
-			}
+			
 
 			.airport span {
 				display: block;
 			}
 
-			.airport-name {
+			.airport .airport-error {
+				text-decoration: none;
+				color: #ff9393;
+			}
 
+			.error .airport-name {
+				text-decoration: line-through;
+			}
+			
+			.error .airport-iata {
+				text-decoration: line-through;
 			}
 
 			.airport-iata {
