--- a/styles.css
+++ b/styles.css
@@ -518,6 +518,7 @@
 					transition: all 0.2s ease;
 					padding: 10px;
 					flex-direction: column;
+					position:relative;
 			}
 
 			
@@ -545,7 +546,12 @@
 			}
 
 			.airport.active {
-				border: 3px solid rgb(214, 211, 163);
+				border: 2px solid rgb(214, 211, 163);
+				border-style: solid dotted solid;
+			}
+
+			.airport.loading.active {
+				border: 2px dotted rgb(214, 211, 163);			
 			}
 			
 			.airport:hover {
@@ -575,3 +581,32 @@
 				display: block;
 			}
 			/* close commented backslash hack */
+
+.spinner {
+  width: 140px;
+  height: 140px;
+  background-color: rgb(214, 211, 163);
+  position: absolute;
+  border-radius: 100%;  
+  -webkit-animation: sk-scaleout 1.0s infinite ease-in-out;
+  animation: sk-scaleout 1.0s infinite ease-in-out;
+}
+
+@-webkit-keyframes sk-scaleout {
+  0% { -webkit-transform: scale(0) }
+  100% {
+    -webkit-transform: scale(1.0);
+    opacity: 0;
+  }
+}
+
+@keyframes sk-scaleout {
+  0% { 
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  } 100% {
+    -webkit-transform: scale(1.0);
+    transform: scale(1.0);
+    opacity: 0;
+  }
+}
