Working playpause and save last airport

--- a/styles.css
+++ b/styles.css
@@ -224,6 +224,7 @@
 			}
 			.isMobile #live {
 				    justify-content: center;
+					font-size:15px;
 					width: 100%;
 					left: 0;
 					top: 0;
