left align for safari

--- a/styles.css
+++ b/styles.css
@@ -592,6 +592,7 @@
   height: 140px;
   background-color: rgb(214, 211, 163);
   top:0;
+  left:0;
   position: absolute;
   border-radius: 100%;  
   -webkit-animation: sk-scaleout 1.0s infinite ease-in-out;
