--- a/styles.css
+++ b/styles.css
@@ -84,14 +84,13 @@
     border: none;
     border-radius: 5px;
     color: #fffff3;
-    margin: 0 10px;
-    margin-top:10px;
     font-weight: 100;
     text-transform: uppercase;
     text-decoration: none;
     font-size: 12px;
     letter-spacing: 2px;
     font-family: "circular";
+    line-height:8em;
 }
 .donate button:hover,
 .btn:hover {
